# rust-remote-pi-monitor

./: Cargo.toml  Dockerfile  README.md  dockerfile
migrations/2021-12-12-191324_initialize/: down.sql  up.sql
migrations/2022-09-02-123855_create_sensor_triggers/: down.sql  up.sql
sql/: database_structure.sql
src/: main.rs  models.rs  node_sensor_functions.rs  routes.rs  schema.rs  send_email.rs  send_telegram.rs
src/routes/: send_email.rs  trigger_validation.rs
