[package]
name = "rust-remote-pi-monitor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Powerful date and time functionality
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1"

# For connecting with the MySQL database
diesel = { version = "1.4.8", features = ["chrono"] }

# Lazy static initialization
lazy_static = "1.4.0"

# Rocket Webserver
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["json", "diesel_mysql_pool"] }

# Serialization/Deserialization
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"

lettre = "0.10.1"

compound_duration = "1.2.0"
