[package]
name = "rust-remote-pi-monitor"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

dotenv = "0.15.0"
config = "0.13.3"

serde = { version = "1.0.159", features = ["derive"] }
deadpool-postgres = { version = "0.10.5", features = ["serde"] }
derive_more = "0.99.0"


tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"

log = "0.4"
env_logger = "0.10.0"

lettre = "0.10.4"
compound_duration = "1.2.0"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1"
humantime = "2.1.0"
